--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ArticlesAgregator",
+  "name": "Depesza",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -34,10 +34,12 @@
     "react-native-elements": "^3.2.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-get-random-values": "^1.6.0",
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-scroll-bottom-sheet": "^0.7.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-webview": "^11.2.3",
     "react-redux": "^7.2.2",
